--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Blink Style</title>
 	<style>
 		.blink-style, style-1 {
   margin: 40px auto;
@@ -68,11 +68,11 @@
 
   <!-- solution style  1 -->
   <div class='blink-style style-1'>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aperiam rem facilis, fugit odit nam sapiente quam architecto! Deleniti nulla ut suscipit. Porro recusandae, consequatur delectus non ratione exercitationem repellat.</p>
+    <p>Give div a "blink-style" class, then 'style-1' or 'style-2' class</p>
   </div>
 <!-- solution style  2 -->
   <div class='blink-style style-2'>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro aperiam rem facilis, fugit odit nam sapiente quam architecto! Deleniti nulla ut suscipit. Porro recusandae, consequatur delectus non ratione exercitationem repellat.</p>
+    <p>1.Give div a "blink-style" class, then 'style-1' or 'style-2' class</p>
   </div>
 </body>
 </html>
