--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
 
   <!-- solution style  1 -->
   <div class='blink-style style-1'>
+    <h3>Style 1</h3>
     <p>Give div a "blink-style" class, then 'style-1' or 'style-2' class</p>
   </div>
 <!-- solution style  2 -->
   <div class='blink-style style-2'>
+    <h3>Style 2</h3>
     <p>1.Give div a "blink-style" class, then 'style-1' or 'style-2' class</p>
   </div>
 </body>
